video duration & some fixes in text-align on blog

--- a/src/pages/blog.module.scss
+++ b/src/pages/blog.module.scss
@@ -49,6 +49,7 @@
             background-color: black;
             flex: 1;
             h2 {
+                text-align: left;
                 margin: 1rem;
                 font-size: 1rem;
             }
