--- a/src/templates/style.css
+++ b/src/templates/style.css
@@ -2,4 +2,5 @@
 
 * {
     font-family: 'Libre Baskerville', serif;
+    text-align: justify;
 }
